--- a/project-3-master/package.json
+++ b/project-3-master/package.json
@@ -26,12 +26,16 @@
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "expressjs": "^1.0.1",
     "if-env": "^1.0.4",
     "mysql2": "^2.1.0",
+    "node.js": "0.0.1-security",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.1.3",
+    "reactdom": "^2.0.0",
     "sequelize": "^6.3.4"
   }
 }
