--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.6.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
+    "express-session": "^1.17.2",
     "if-env": "^1.0.4",
-    "mysql2": "^2.1.0",
+    "mysql2": "^2.2.5",
+    "node": "^16.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "react-bootstrap": "^1.3.0",
-    "react-datepicker": "^3.1.3",
-    "sequelize": "^6.3.4"
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
+    "react-datepicker": "^3.8.0",
+    "react-dom": "^17.0.2",
+    "sequelize": "^6.6.2"
   }
 }
