--- a/config/config.json
+++ b/config/config.json
@@ -15,7 +15,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "username": "b7f5fc9eeef1e0",
+    "password": "873543d7",    
+    "database": "heroku_10903362d553ad5",
+    "host": "us-cdbr-east-03.cleardb.com",
     "dialect": "mysql"
   }
 }
