--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,15 @@
 {
   "development": {
-    "username": "root",
-    "password": "$$Yumaaz1996$$",    
-    "database": "chore_db",
+    "username": "b7f5fc9eeef1e0",
+    "password": "873543d7",    
+    "database": "heroku_10903362d553ad5",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "$$Yumaaz1996$$",    
-    "database": "database_test",
+    "username": "b7f5fc9eeef1e0",
+    "password": "873543d7",    
+    "database": "heroku_10903362d553ad5",
     "port": 3301,
     "host": "127.0.0.1",
     "dialect": "mysql"
