--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-3",
   "version": "1.0.0",
   "description": "project-3",
-  "main": "server.js",
+  "main": "server.js --max-http-header-size=15000",
   "homepage": "./client/public/index.html",
   "engines": {
     "node": "12.x"
