--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-3",
   "version": "1.0.0",
   "description": "project-3",
-  "main": "server.js --max-http-header-size=15000",
+  "main": "server.js",
   "homepage": "./client/public/index.html",
   "engines": {
     "node": "12.x"
@@ -33,6 +33,7 @@
     "node": "^16.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-datepicker": "^3.8.0",
